# madSocial

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: django.yml
accounts/: forms.py  views.py
core/: settings.py  urls.py
env3.9/: pyvenv.cfg
posts/: forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py  0003_comment_likes_post_likes.py
static/: main.css  main.css.map  main.scss
templates/: base.html
templates/accounts/: edit_profile.html  login.html  signup.html  user_details.html
templates/includes/: footer.html  header.html
templates/layout/: layout.html
templates/posts/: create_post.html  edit_comment.html  edit_post.html  post.html  single_post.html
