[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["abhinav09 <shawabhinav93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
